--- a/experiences.html
+++ b/experiences.html
@@ -22,7 +22,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top mainNav2">
     <div class="container">
       <a class="navbar-brand" href="#">
-           <a href="index.html"><img src="../CV Num/logodre.png" alt="logo"></a> 
+           <a href="index.html"><img src="./logodre.png" alt="logo"></a> 
           </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
   <!-- Page Content -->
   <div class="container-fluid">
     <div class="wesf">
-      <img src="../img/joanna-kosinska-129039-unsplash.jpg" alt="photo" class="dodo">
+      <img src="./img/joanna-kosinska-129039-unsplash.jpg" alt="photo" class="dodo">
      <div class="impp">
         <h2 class="imp">Expériences professionnelles</h2>
         <div class="row">
@@ -103,7 +103,7 @@
                   <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                  <a href="../img/CV André LAME.pdf">Télécharger mon CV</a>
+                  <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
                </li>
                <li>
                   <a href="#">Haut de page</a>
