--- a/hobbies.html
+++ b/hobbies.html
@@ -29,7 +29,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top maNavHobbies">
         <div class="container">
           <a class="navbar-brand" href="#">
-              <a href="index.html"><img src="../CV Num/logodre.png" alt="logo"></a> 
+              <a href="index.html"><img src="./logodre.png" alt="logo"></a> 
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -63,11 +63,11 @@
       <!-- Page Content -->
       <div class="container-fluid">
         <div class="wesf">
-          <img src="../img2/cross.jpg" alt="photo" class="photoHobbies">
-          <img src="../img2/tennis.jpg" alt="photo" class="photoHobbies">
-          <img src="../img2/bibli.jpg" alt="photo" class="photoHobbies">
-          <img src="../img2/cine.jpg" alt="photo" class="photoHobbies">
-          <img src="../img2/plage.jpg" alt="photo" class="photoHobbies">
+          <img src="./img2/cross.jpg" alt="photo" class="photoHobbies">
+          <img src="./img2/tennis.jpg" alt="photo" class="photoHobbies">
+          <img src="./img2/bibli.jpg" alt="photo" class="photoHobbies">
+          <img src="./img2/cine.jpg" alt="photo" class="photoHobbies">
+          <img src="./img2/plage.jpg" alt="photo" class="photoHobbies">
           <div class="bandeau">
             <h1 class="h1band">André Edward LAME</h1>
             <h2>Intégrateur web junior</h2>
@@ -106,7 +106,7 @@
                 <a href="contact.html">Contact</a>
               </li>
               <li>
-                <a href="../img/CV André LAME.pdf">Télécharger mon CV</a>
+                <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
              </li>
              <li>
                 <a href="#">Haut de page</a>
