--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top mainNav">
     <div class="container">
       <a class="navbar-brand" href="#">
-          <a href="index.html"><img src="../CV Num/logodre.png" alt="logo"></a> 
+          <a href="index.html"><img src="./logodre.png" alt="logo"></a> 
           </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
   <!-- Page Content -->
   <div class="container-fluid">
     <div class="wesf">
-      <img src="../CV Num/christopher-gower-291246-unsplash.jpg" alt="photo" class="dodo">
+      <img src="./christopher-gower-291246-unsplash.jpg" alt="photo" class="dodo">
      <div class="toto">
         <h1>André Edward LAME</h1>
         <h2>Intégrateur web junior</h2>
@@ -76,7 +76,7 @@
       <nav class="footnav">
           <ul>
             <li>
-              <a href="../img/CV André LAME.pdf">Télécharger mon CV</a>
+              <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
            </li>
            <li>
               <a href="contact.html">Contact</a>
