--- a/competences.html
+++ b/competences.html
@@ -29,7 +29,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top maNav">
         <div class="container">
           <a class="navbar-brand" href="#">
-              <a href="index.html"><img src="../CV Num/logodre.png" alt="logo"></a> 
+              <a href="index.html"><img src="./logodre.png" alt="logo"></a> 
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -195,7 +195,7 @@
                 <a href="contact.html">Contact</a>
               </li>
               <li>
-                <a href="../img/CV André LAME.pdf">Télécharger mon CV</a>
+                <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
              </li>
              <li>
                 <a href="#">Haut de page</a>
