--- a/formation.html
+++ b/formation.html
@@ -22,7 +22,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top mainNav3">
     <div class="container">
       <a class="navbar-brand" href="#">
-          <a href="index.html"><img src="../CV Num/logodre.png" alt="logo"></a> 
+          <a href="index.html"><img src="./logodre.png" alt="logo"></a> 
           </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
   <!-- Page Content -->
   <div class="container-fluid">
     <div class="wesf">
-      <img src="../img/luis-reyes-1204032-unsplash.jpg" alt="photo" class="dodo">
+      <img src="./img/luis-reyes-1204032-unsplash.jpg" alt="photo" class="dodo">
      <div class="toto2">
         <h1 class="ipp2">Formation</h1>
         <div class="row">
@@ -93,7 +93,7 @@
                   <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                  <a href="../img/CV André LAME.pdf">Télécharger mon CV</a>
+                  <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
                </li>
                <li>
                   <a href="#">Haut de page</a>
