--- a/realisations.html
+++ b/realisations.html
@@ -21,7 +21,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top mainNavReal">
     <div class="container">
       <a class="navbar-brand" href="#">
-          <a href="index.html"><img src="../CV Num/logodre.png" alt="logo"></a> 
+          <a href="index.html"><img src="./logodre.png" alt="logo"></a> 
           </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -65,7 +65,7 @@
   <main>
     <h1 class="h1Real">Mes Réalisations (projets)</h1>
     <h2 class="h2Real">Site de produits F1 Team Mercedes Lewis HAMILTON</h2>
-      <article> <img src="../Capture d’écran 2019-05-07 à 19.57.31.png" alt="photo" class="real"> </article>
+      <article> <img src="./img/Capture d’écran 2019-05-07 à 19.57.31.png" alt="photo" class="real"> </article>
      
   </main>
   <footer>
@@ -75,7 +75,7 @@
                   <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                  <a href="../img/CV André LAME.pdf">Télécharger mon CV</a>
+                  <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
                </li>
                <li>
                   <a href="#">Haut de page</a>
