--- a/competences.html
+++ b/competences.html
@@ -67,9 +67,9 @@
           <div class="mimi">
             <h1>André Edward LAME</h1>
             <h2>Intégrateur web junior</h2>
-            <button class="popo">
+            <button class="popo"><a href="contact.html" class="popo">
               Me contacter
-            </button>
+            </a></button>
           </div>
         </div>
       </div>
