--- a/hobbies.html
+++ b/hobbies.html
@@ -71,9 +71,9 @@
           <div class="bandeau">
             <h1 class="h1band">André Edward LAME</h1>
             <h2>Intégrateur web junior</h2>
-            <button class="bandeauHobbies">
+            <button class="bandeauHobbies"><a href="contact.html" class="bandeauHobbies">
               Me contacter
-            </button>
+            </a></button>
           </div>
         </div>
       </div>
