--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <h1>André Edward LAME</h1>
         <h2>Intégrateur web junior</h2>
         <a href="contact.html">
-        <button class="popo">
-          Me contacter
-        </button>
+          <button class="popo"><a href="contact.html" class="popo">
+            Me contacter
+          </a></button>
       </a>
      </div>
     </div>
