--- a/formation.html
+++ b/formation.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+  </script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>CV André Edward LAME</title>
@@ -16,92 +21,99 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800" rel="stylesheet">
   <script src="main.js"></script>
 </head>
+
 <body>
   <header>
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top mainNav3">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-          <a href="index.html"><img src="./logodre.png" alt="logo"></a> 
-          </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top mainNav3">
+      <a class="navbar-brand" href="index.html">
+        <img src="./logodre.png" alt="logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="index.html">Accueil
-                  <span class="sr-only">(current)</span>
-                </a>
-         </li>
-            <li class="nav-item">
-              <a class="nav-link" href="experiences.html">Expériences</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="competences.html">Compétences</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="formation.html">Formation</a>
-            </li>        
-            <li class="nav-item">
-              <a class="nav-link" href="realisations.html">Réalisations</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="hobbies.html">Hobbies</a>
-            </li>
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="experiences.html">Expériences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="competences.html">Compétences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="formation.html">Formation</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="realisations.html">Réalisations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="hobbies.html">Hobbies</a>
+          </li>
         </ul>
       </div>
-    </div>
-  </nav>  
-  <!-- Page Content -->
-  <div class="container-fluid">
-    <div class="wesf">
-      <img src="./img/luis-reyes-1204032-unsplash.jpg" alt="photo" class="dodo">
-     <div class="toto2">
-        <h1 class="ipp2">Formation</h1>
-        <div class="row">
-            <div class="col-sm-6"><h3>Spécialisations</h3></div>
-                  <p>
-                   De décembre 2018 à Juin 2019 (7 mois) : Formation du Passe Numérique pro - au CNAM de Paris (conservatoire national des arts et métiers de Paris) option intégrateur Web 
-                  </p>
-                  <p>
-                  De septembre 2012 à Juin 2014 (une année scolaire) : 
-                  Cours Florent (école de théâtre et cinéma)
-                  - Jeux face caméra, cadrage, prise de son et montage sur Final Cut pro X 
-                  - Improvisation théâtrale et cinématographique avec des pièces de
-                  théâtres
-                </p>
-            <div class="col-sm-6"><h3>Lycée</h3></div>
+    </nav>
+    <!-- Page Content -->
+    <div class="container-fluid">
+      <div class="wesf">
+        <img src="./img/luis-reyes-1204032-unsplash.jpg" alt="photo" class="dodo">
+        <div class="toto2">
+          <h1 class="ipp2">Formation</h1>
+          <div class="row">
+            <div class="col-sm-6">
+              <h3>Spécialisations</h3>
+            </div>
+            <p>
+              De décembre 2018 à Juin 2019 (7 mois) : Formation du Passe Numérique pro - au CNAM de Paris (conservatoire
+              national des arts et métiers de Paris) option intégrateur Web
+            </p>
+            <p>
+              De septembre 2012 à Juin 2014 (une année scolaire) :
+              Cours Florent (école de théâtre et cinéma)
+              - Jeux face caméra, cadrage, prise de son et montage sur Final Cut pro X
+              - Improvisation théâtrale et cinématographique avec des pièces de
+              théâtres
+            </p>
+            <div class="col-sm-6">
+              <h3>Lycée</h3>
+            </div>
             <ul>
               <li>
-                  De septembre 2011 à Juin 2012 (une année scolaire) : Lycée Pierre Lescot : Bac pro vente & commerce : niveau seconde
+                De septembre 2011 à Juin 2012 (une année scolaire) : Lycée Pierre Lescot : Bac pro vente & commerce :
+                niveau seconde
               </li>
             </ul>
           </div>
-     </div>
+        </div>
+      </div>
     </div>
-  </div>
-  <!-- /.container -->
-</header>
+    <!-- /.container -->
+  </header>
   <main>
 
   </main>
   <footer>
-      <nav class="footnav">
-          <ul>
-              <li>
-                  <a href="contact.html">Contact</a>
-                </li>
-                <li>
-                  <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
-               </li>
-               <li>
-                  <a href="#">Haut de page</a>
-                </li>
-              </ul>
-      </nav>
+    <nav class="footnav">
+      <ul>
+        <li>
+          <a href="contact.html">Contact</a>
+        </li>
+        <li>
+          <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
+        </li>
+        <li>
+          <a href="#">Haut de page</a>
+        </li>
+      </ul>
+    </nav>
   </footer>
   <script src="bootstrap.min.js"></script>
   <script src="bootstrap.bundle.js"></script>
 </body>
+
 </html>
