--- a/hobbies.html
+++ b/hobbies.html
@@ -1,118 +1,124 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>CV André Edward LAME</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" media="screen" href="bootstrap.min.css">
-<link rel="stylesheet" type="text/css" media="screen" href="main.css">
-<link rel="stylesheet" type="text/css" media="screen" href="animate.css">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,900" rel="stylesheet">
-<link rel="stylesheet" href="fontawesome/css/all.css">
-<script src="main.js"></script>
-<script src="js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+  </script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>CV André Edward LAME</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="animate.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="fontawesome/css/all.css">
+  <script src="main.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 
-<style>
+  <style>
 
-</style>
+  </style>
 </head>
-  <body>
-    <header>
-      <!-- Navigation -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top maNavHobbies">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-              <a href="index.html"><img src="./logodre.png" alt="logo"></a> 
+
+<body>
+  <header>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top maNavHobbies">
+      <a class="navbar-brand" href="index.html">
+        <img src="./logodre.png" alt="logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Accueil
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="experiences.html">Expériences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="competences.html">Compétences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="formation.html">Formation</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="realisations.html">Réalisations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="hobbies.html">Hobbies</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- Page Content -->
+    <div class="container-fluid">
+      <div class="wesf">
+        <img src="./img2/cross.jpg" alt="photo" class="photoHobbies">
+        <img src="./img2/tennis.jpg" alt="photo" class="photoHobbies">
+        <img src="./img2/bibli.jpg" alt="photo" class="photoHobbies">
+        <img src="./img2/cine.jpg" alt="photo" class="photoHobbies">
+        <img src="./img2/plage.jpg" alt="photo" class="photoHobbies">
+        <div class="bandeau">
+          <h1 class="h1band">André Edward LAME</h1>
+          <h2>Intégrateur web junior</h2>
+          <a href="contact.html" class="bandeauHobbies">
+            Me contacter
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Accueil
-                  <span class="sr-only">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="experiences.html">Expériences</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="competences.html">Compétences</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="formation.html">Formation</a>
-              </li>        
-              <li class="nav-item">
-                <a class="nav-link" href="realisations.html">Réalisations</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="hobbies.html">Hobbies</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>  
-      <!-- Page Content -->
-      <div class="container-fluid">
-        <div class="wesf">
-          <img src="./img2/cross.jpg" alt="photo" class="photoHobbies">
-          <img src="./img2/tennis.jpg" alt="photo" class="photoHobbies">
-          <img src="./img2/bibli.jpg" alt="photo" class="photoHobbies">
-          <img src="./img2/cine.jpg" alt="photo" class="photoHobbies">
-          <img src="./img2/plage.jpg" alt="photo" class="photoHobbies">
-          <div class="bandeau">
-            <h1 class="h1band">André Edward LAME</h1>
-            <h2>Intégrateur web junior</h2>
-            <button class="bandeauHobbies"><a href="contact.html" class="bandeauHobbies">
-              Me contacter
-            </a></button>
-          </div>
         </div>
       </div>
-    </header>
-    <!-- /.container -->
-    <script src="bootstrap.min.js"></script>
-    <script src="bootstrap.bundle.js"></script>
-    <div class="parallax2">
-      <span> </span>
-      <h1 class="html text-light mx-auto d-block">
-        
-      </h1>
     </div>
+  </header>
+  <!-- /.container -->
+  <script src="bootstrap.min.js"></script>
+  <script src="bootstrap.bundle.js"></script>
+  <div class="parallax2">
+    <span> </span>
+    <h1 class="html text-light mx-auto d-block">
 
-    <div class="html text-light shadow" style="background-color:white;;font-size:22px">
+    </h1>
+  </div>
 
-    </div>
+  <div class="html text-light shadow" style="background-color:white;;font-size:22px">
 
-    <div class="parallax2">
-    </div>
+  </div>
 
-    <div style="background-color: #529daf;;font-size:22px" class="">
+  <div class="parallax2">
+  </div>
 
-    </div>
-    
-    <footer>
-        <nav class="footnav4">
-            <ul>
-            <li>
-                <a href="contact.html">Contact</a>
-              </li>
-              <li>
-                <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
-             </li>
-             <li>
-                <a href="#">Haut de page</a>
-              </li>
-            </ul>
-        </nav>
-    </footer>
-  </body>
+  <div style="background-color: #529daf;;font-size:22px" class="">
+
+  </div>
+
+  <footer>
+    <nav class="footnav4">
+      <ul>
+        <li>
+          <a href="contact.html">Contact</a>
+        </li>
+        <li>
+          <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
+        </li>
+        <li>
+          <a href="#">Haut de page</a>
+        </li>
+      </ul>
+    </nav>
+  </footer>
+</body>
+
 </html>
