--- a/experiences.html
+++ b/experiences.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+  </script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>CV André Edward LAME</title>
@@ -16,24 +21,26 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800" rel="stylesheet">
   <script src="main.js"></script>
 </head>
+
 <body>
   <header>
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top mainNav2">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-           <a href="index.html"><img src="./logodre.png" alt="logo"></a> 
-          </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Accueil
-                  <span class="sr-only">(current)</span>
-                </a>
-         </li>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top mainNav2">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="./logodre.png" alt="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+          aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Accueil
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="experiences.html">Expériences</a>
             </li>
@@ -42,28 +49,30 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="formation.html">Formation</a>
-            </li>        
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="realisations.html">Réalisations</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="hobbies.html">Hobbies</a>
             </li>
-        </ul>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>  
-  <!-- Page Content -->
-  <div class="container-fluid">
-    <div class="wesf">
-      <img src="./img/joanna-kosinska-129039-unsplash.jpg" alt="photo" class="dodo">
-     <div class="impp">
-        <h2 class="imp">Expériences professionnelles</h2>
-        <div class="row">
-            <div class="col-sm-6"><h3>Contrats</h3></div>
+    </nav>
+    <!-- Page Content -->
+    <div class="container-fluid">
+      <div class="wesf">
+        <img src="./img/joanna-kosinska-129039-unsplash.jpg" alt="photo" class="dodo">
+        <div class="impp">
+          <h2 class="imp">Expériences professionnelles</h2>
+          <div class="row">
+            <div class="col-sm-6">
+              <h3>Contrats</h3>
+            </div>
             <ul>
               <li>
-                2017 - 2018 (1 an) : Morton’s club (Londres) - Serveur dans la partie restaurant 
+                2017 - 2018 (1 an) : Morton’s club (Londres) - Serveur dans la partie restaurant
               </li>
               <li>
                 2016 - 2017 (1 an) : Lamandre - Gérant de l’entreprise, magasin de vêtements pour femmes
@@ -72,46 +81,49 @@
                 2014 - 2016 (2 ans) : Lieux d’émotions – Serveur pour des mariages, diners d’affaires et clubbing
               </li>
               <li>
-                  2012 - 2014 (2 ans) : Phone prestige Paris, Vendeur et réparateur de téléphone portable
+                2012 - 2014 (2 ans) : Phone prestige Paris, Vendeur et réparateur de téléphone portable
               </li>
             </ul>
-            <div class="col-sm-6"><h3>Stages</h3></div>
+            <div class="col-sm-6">
+              <h3>Stages</h3>
+            </div>
             <ul>
               <li>
                 2019 (6 semaines) : Syltours, Reconstruction complète du site internet (Syltours.fr)
               </li>
               <li>
-                  2011 (1 mois) : Restaurant de l’Unesco – Serveur pour le personnel de l’Unesco à paris 75007
+                2011 (1 mois) : Restaurant de l’Unesco – Serveur pour le personnel de l’Unesco à paris 75007
               </li>
               <li>
-                  2011 (2 semaines) : Pierrus asset management : secrétariat classement des documents
+                2011 (2 semaines) : Pierrus asset management : secrétariat classement des documents
               </li>
             </ul>
           </div>
-     </div>
+        </div>
+      </div>
     </div>
-  </div>
-  <!-- /.container -->
-</header>
+    <!-- /.container -->
+  </header>
   <main>
 
   </main>
   <footer>
-      <nav class="footnavEx">
-          <ul>
-              <li>
-                  <a href="contact.html">Contact</a>
-                </li>
-                <li>
-                  <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
-               </li>
-               <li>
-                  <a href="#">Haut de page</a>
-                </li>
-              </ul>
-      </nav>
+    <nav class="footnavEx">
+      <ul>
+        <li>
+          <a href="contact.html">Contact</a>
+        </li>
+        <li>
+          <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
+        </li>
+        <li>
+          <a href="#">Haut de page</a>
+        </li>
+      </ul>
+    </nav>
   </footer>
   <script src="bootstrap.min.js"></script>
   <script src="bootstrap.bundle.js"></script>
 </body>
+
 </html>
