--- a/realisations.html
+++ b/realisations.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+  </script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>CV André Edward LAME</title>
@@ -15,75 +20,74 @@
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
   <script src="main.js"></script>
 </head>
+
 <body>
   <header>
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top mainNavReal">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-          <a href="index.html"><img src="./logodre.png" alt="logo"></a> 
-          </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top mainNavReal">
+      <a class="navbar-brand" href="index.html">
+        <img src="./logodre.png" alt="logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="index.html">Accueil
-                  <span class="sr-only">(current)</span>
-                </a>
-         </li>
-            <li class="nav-item">
-              <a class="nav-link" href="experiences.html">Expériences</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="competences.html">Compétences</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="formation.html">Formation</a>
-            </li>        
-            <li class="nav-item">
-              <a class="nav-link" href="realisations.html">Réalisations</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="hobbies.html">Hobbies</a>
-            </li>
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="experiences.html">Expériences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="competences.html">Compétences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="formation.html">Formation</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="realisations.html">Réalisations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="hobbies.html">Hobbies</a>
+          </li>
         </ul>
       </div>
+    </nav>
+    <!-- Page Content -->
+    <div class="container-fluid">
+      <div class="wesf">
     </div>
-  </nav>  
-  <!-- Page Content -->
-  <div class="container-fluid">
-    <div class="wesf">
-      <img src="" alt="photo" class="dodo">
-
-     </div>
     </div>
-  </div>
-  <!-- /.container -->
-</header>
+    <!-- /.container -->
+  </header>
   <main>
     <h1 class="h1Real">Mes Réalisations (projets)</h1>
     <h2 class="h2Real">Site de produits F1 Team Mercedes Lewis HAMILTON</h2>
-      <article> <img src="./img/Capture d’écran 2019-05-07 à 19.57.31.png" alt="photo" class="real"> </article>
-     
+    <article> <img src="./img/Capture d’écran 2019-05-07 à 19.57.31.png" alt="photo" class="real">
+    </article>
+
   </main>
   <footer>
-      <nav class="footnavReal">
-          <ul>
-              <li>
-                  <a href="contact.html">Contact</a>
-                </li>
-                <li>
-                  <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
-               </li>
-               <li>
-                  <a href="#">Haut de page</a>
-                </li>
-              </ul>
-      </nav>
+    <nav class="footnavReal">
+      <ul>
+        <li>
+          <a href="contact.html">Contact</a>
+        </li>
+        <li>
+          <a href="./img/CV André LAME.pdf">Télécharger mon CV</a>
+        </li>
+        <li>
+          <a href="#">Haut de page</a>
+        </li>
+      </ul>
+    </nav>
   </footer>
   <script src="bootstrap.min.js"></script>
   <script src="bootstrap.bundle.js"></script>
 </body>
+
 </html>
