--- a/contact.html
+++ b/contact.html
@@ -61,10 +61,10 @@
       <form action="action_page.php">
 
         <label for="fname">Nom de Famille</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <input type="text" id="fname" name="firstname" placeholder="Nom de famille..">
 
         <label for="lname">Prénom</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        <input type="text" id="lname" name="lastname" placeholder="Prénom..">
 
         <label for="country">Pays</label>
         <select id="country" name="country">
@@ -76,7 +76,7 @@
         </select>
 
         <label for="subject">Message</label>
-        <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+        <textarea id="subject" name="subject" placeholder="Votre message" style="height:200px"></textarea>
 
         <input type="submit" value="Envoyer">
 
